# qux360-demo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/app/: main.py  uploads.db
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: App.svelte  app.css  vite-env.d.ts
frontend/src/lib/: Step1_LoadTranscript.svelte  Step2_ExtractSpeakers.svelte  Step3_Anonymize.svelte  Wizard.svelte
frontend/src/lib/common/: AILabel.svelte  AISettingsModal.svelte  CreateTopicModal.svelte  EditTopicModal.svelte  LoadingComponent.svelte  Quote.svelte  SupportingQuotes.svelte  Tabs.svelte  UploadTranscriptFiles.svelte  constants.ts  index.ts
frontend/src/lib/components/: index.ts
frontend/src/lib/components/header/: Header.svelte
frontend/src/lib/components/home/: Home.svelte  index.ts
frontend/src/lib/components/new-study/: Information.svelte  NewStudy.svelte  Transcripts.svelte
frontend/src/lib/components/notifications/: Notifications.svelte
frontend/src/lib/components/page/: Page.svelte
frontend/src/lib/components/study/: AllStudiesPanel.svelte  Study.svelte  index.ts  (+1 more)
frontend/src/lib/models/: carbon.ts  index.ts  study.ts  transcript.ts
frontend/src/lib/services/: api-service.ts  index.ts  studies-cache-service.ts  utils-service.ts
frontend/src/lib/stores/: index.ts  loading-request-store.ts  notifications-store.ts  selected-study-store.ts  selected-transcript-store.ts  studies-store.ts
(+33 files in other folders)
